--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,50 +1,21 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:orientation="vertical"
     android:padding="16dp">
 
-    <EditText
-        android:id="@+id/user_login"
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/button_login"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="Username"/>
-
-    <EditText
-        android:id="@+id/user_email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Email"
-        android:inputType="textEmailAddress"/>
-
-    <EditText
-        android:id="@+id/user_pass"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Password"
-        android:inputType="textPassword"/>
-
-    <EditText
-        android:id="@+id/user_firstname"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="First Name"/>
-
-    <EditText
-        android:id="@+id/user_lastname"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Last Name"/>
+        android:text="@string/login"
+        android:layout_marginBottom="16dp"/>
 
     <Button
-        android:id="@+id/button_reg"
-        android:layout_width="match_parent"
+        android:id="@+id/button_register"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sign Up"/>
-
-    <TextView
-        android:id="@+id/tvResult"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"/>
+        android:text="@string/registration"/>
 </LinearLayout>
