--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="teal_700">#018786</color>
+    <color name="gray">#808080</color>
+    <color name="red">#FF0000</color>
 </resources>
