--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,21 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
     android:padding="16dp">
+    <TextView
+    android:layout_width="161dp"
+    android:layout_height="39dp"
+    android:text="Welcome to"
+    android:textColor="@color/primaryTextColor"
+    android:textSize="30sp"
+    android:textStyle="bold"
+    tools:ignore="MissingConstraints"
+    tools:layout_editor_absoluteX="125dp"
+    tools:layout_editor_absoluteY="99dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TAMYR APP"
+        android:textColor="@color/accentColor"
+        android:textSize="40sp"
+        android:textStyle="bold"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="93dp"
+        tools:layout_editor_absoluteY="138dp" />
+
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="375dp"
+        android:layout_height="349dp"
+
+        android:src="@drawable/logo"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="18dp"
+        tools:layout_editor_absoluteY="211dp" />
 
     <Button
         android:id="@+id/button_login"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/login"
-        android:layout_marginBottom="16dp"/>
+        android:textColor="@android:color/white"
+        android:backgroundTint="@color/purple_500"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginHorizontal="32dp"
+        android:padding="12dp"
+        android:background="@drawable/rounded_button"
+
+        />
 
     <Button
         android:id="@+id/button_register"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/registration"/>
+        android:text="@string/registration"
+        android:textColor="@android:color/white"
+        android:background="@drawable/rounded_button"
+        android:layout_marginHorizontal="32dp"
+        android:layout_marginBottom="32dp"
+        android:padding="12dp"/>
+
 </LinearLayout>
