--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,18 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
+    <color name="primaryTextColor">#3D1880</color>
+    <color name="accentColor">#A73232</color>
+    <color name="buttonColor">#3D1880</color>
+    <color name="borderColor">#3D1880</color>
+    <color name="accentPurple">#6A0DAD</color> <!-- Цвет при нажатии -->
+    <color name="backgroundColor">#F8F6EF</color> <!-- Цвет фона (слоновая кость) -->
+    <color name="textColor">#4B237D</color> <!-- Фиолетовый (для текста) -->
+    <color name="darkPurple">#4B237D</color> <!-- Тёмно-фиолетовый -->
+    <color name="buttonText">#FFFFFF</color> <!-- Белый текст для кнопки -->
 </resources>
