--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,9 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:background="#F8F6F1">
+
     <TextView
     android:layout_width="161dp"
     android:layout_height="39dp"
@@ -39,29 +41,29 @@
         tools:layout_editor_absoluteY="211dp" />
 
     <Button
-        android:id="@+id/button_login"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/login"
-        android:textColor="@android:color/white"
-        android:backgroundTint="@color/purple_500"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginHorizontal="32dp"
-        android:padding="12dp"
-        android:background="@drawable/rounded_button"
-
-        />
+        android:id="@+id/button_register"
+        android:layout_width="327dp"
+        android:layout_height="42dp"
+        android:text="Sign Up"
+        android:textColor="#FCFCF4"
+        android:textSize="16sp"
+        android:fontFamily="@font/raleway_bold"
+        android:background="@drawable/btn_signup_background"
+        android:gravity="center"
+        android:layout_marginTop="40dp"
+        android:elevation="2dp" />
 
     <Button
-        android:id="@+id/button_register"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/registration"
-        android:textColor="@android:color/white"
-        android:background="@drawable/rounded_button"
-        android:layout_marginHorizontal="32dp"
-        android:layout_marginBottom="32dp"
-        android:padding="12dp"/>
+        android:id="@+id/button_login"
+        android:layout_width="327dp"
+        android:layout_height="42dp"
+        android:text="Login"
+        android:textColor="#EDECF4"
+        android:textSize="16sp"
+        android:fontFamily="@font/raleway_bold"
+        android:background="@drawable/btn_login_background"
+        android:gravity="center"
+        android:layout_marginTop="16dp"
+        android:elevation="2dp" />
 
 </LinearLayout>
